set(FMT_SOURCES ${FMT_SOURCES}
	${CMAKE_CURRENT_SOURCE_DIR}/core.h
	${CMAKE_CURRENT_SOURCE_DIR}/format.cc
	${CMAKE_CURRENT_SOURCE_DIR}/format.h
	${CMAKE_CURRENT_SOURCE_DIR}/format-inl.h
	${CMAKE_CURRENT_SOURCE_DIR}/ostream.h
	${CMAKE_CURRENT_SOURCE_DIR}/posix.cc
	${CMAKE_CURRENT_SOURCE_DIR}/posix.h
	${CMAKE_CURRENT_SOURCE_DIR}/printf.h
	${CMAKE_CURRENT_SOURCE_DIR}/ranges.h
	${CMAKE_CURRENT_SOURCE_DIR}/time.h
)

add_library(fmt STATIC ${FMT_SOURCES})