AM_CPPFLAGS=-I$(top_srcdir)/src

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = conf.cpp list.cpp eventlog.cpp hexdump.cpp bn_type.cpp util.cpp \
	addr.cpp d2char_checksum.cpp xalloc.cpp network.cpp packet.cpp xstring.cpp \
	asnprintf.cpp bnethash.cpp bnethashconv.cpp bnettime.cpp bn_type.cpp \
	fdwatch.cpp fdwatch_epoll.cpp fdwatch_kqueue.cpp fdwatch_poll.cpp \
	fdwatch_select.cpp give_up_root_privileges.cpp hashtable.cpp \
	proginfo.cpp queue.cpp rcm.cpp rlimit.cpp tag.cpp token.cpp trans.cpp \
	fdwbackend.cpp xstr.cpp

noinst_HEADERS = addr.h anongame_protocol.h asnprintf.h bnethashconv.h \
	bnethash.h bnet_protocol.h bnettime.h bn_type.h bot_protocol.h \
	conf.h d2char_checksum.h d2char_file.h d2game_protocol.h elist.h \
	eventlog.h fdwatch_epoll.h fdwatch.h fdwatch_kqueue.h fdwatch_poll.h \
	fdwatch_select.h field_sizes.h file_protocol.h flags.h hashtable.h \
	give_up_root_privileges.h hexdump.h init_protocol.h introtate.h \
	irc_protocol.h list.h lstr.h network.h packet.h proginfo.h queue.h \
	rcm.h rlimit.h setup_after.h setup_before.h tag.h token.h tracker.h \
	trans.h udp_protocol.h util.h version.h xalloc.h xstring.h \
	d2cs_bnetd_protocol.h d2cs_d2dbs_ladder.h d2cs_d2gs_character.h \
	d2cs_d2gs_protocol.h d2cs_protocol.h scoped_array.h scoped_ptr.h \
	fdwbackend.h xstr.h
