AM_CPPFLAGS=-I$(top_srcdir)/src

noinst_LIBRARIES = libcompat.a

libcompat_a_SOURCES = psock.cpp strerror.cpp strsep.cpp difftime.cpp getopt.cpp \
	gettimeofday.cpp inet_aton.cpp inet_ntoa.cpp memcpy.cpp memmove.cpp memset.cpp \
	mmap.cpp pdir.cpp snprintf.cpp strcasecmp.cpp strdup.cpp strftime.cpp \
	strncasecmp.cpp strtoul.cpp uname.cpp vsnprintf.cpp

noinst_HEADERS = access.h char_bit.h difftime.h exitstatus.h gethostname.h \
	getopt.h gettimeofday.h inet_aton.h inet_ntoa.h memcpy.h memmove.h \
	memset.h mkdir.h mmap.h netinet_in.h pdir.h psock.h read.h recv.h \
	rename.h seek.h send.h signal.h snprintf.h socket.h statmacros.h \
	stdfileno.h strcasecmp.h strchr.h strdup.h strerror.h strftime.h \
	strncasecmp.h strrchr.h strsep.h strtoul.h termios.h termios.h \
	uint.h uname.h vargs.h vsnprintf.h
