AM_CPPFLAGS=-I$(top_srcdir)/src

noinst_LIBRARIES = libcompat.a

libcompat_a_SOURCES = psock.cpp strerror.cpp strsep.cpp pgetopt.cpp \
	gettimeofday.cpp inet_aton.cpp inet_ntoa.cpp mmap.cpp pdir.cpp \
	snprintf.cpp strcasecmp.cpp strdup.cpp strncasecmp.cpp strtoul.cpp \
	uname.cpp vsnprintf.cpp

noinst_HEADERS = access.h gethostname.h gettimeofday.h inet_aton.h \
	inet_ntoa.h mkdir.h mmap.h netinet_in.h pdir.h psock.h read.h recv.h \
	rename.h send.h snprintf.h socket.h statmacros.h stdfileno.h \
	strcasecmp.h strdup.h strerror.h strncasecmp.h strsep.h strtoul.h \
	termios.h uint.h uname.h vsnprintf.h pgetopt.h
